# open_model_zoo

ci/: requirements-ac-test.txt  requirements-demos.txt  requirements-quantization.txt  update-requirements.py
demos/common/cpp/models/src/: detection_model_yolov3_onnx.cpp
demos/face_beautification_demo/cpp/: CMakeLists.txt  detectors.cpp  detectors.hpp  face.cpp  main.cpp  visualizer.cpp  visualizer.hpp
demos/face_beautification_demo/tflite/: CMakeLists.txt  detectors.cpp  detectors.hpp  face.cpp  face.hpp  filter.cpp  filter.hpp  main.cpp  models.cpp  models.hpp  visualizer.cpp  visualizer.hpp
demos/interactive_face_detection_demo/cpp/: README.md  main.cpp
demos/interactive_face_detection_demo/cpp_gapi/: README.md  main.cpp
demos/tests/: README.md  args.py  cases.py  data_sequences.py  default_config.yml  demos.py  parsers.py  performance_cases.py  requirements.in  run_tests.py  start_tests.py  utils.py
demos/tests/configs/: default_config.yml  hot_models_config.yml  kvadra_demos_config.yml
demos/tests/demos_tests/: args.py  data_sequences.py  demos.py  parsers.py  providers.py  run_tests.py  utils.py
demos/tests/demos_tests/yaml_validation/: __init__.py  schema.yml  validation.py
demos/tests/validation/: schema.yml  validation.py
tools/accuracy_checker/openvino/tools/accuracy_checker/adapters/: segmentation.py  ssd.py
tools/accuracy_checker/openvino/tools/accuracy_checker/evaluators/: model_evaluator.py
tools/accuracy_checker/openvino/tools/accuracy_checker/launcher/: openvino_launcher.py
(+2 files in other folders)
